# lazyssh

./: Cargo.toml  README.md
src/: app.rs  event_handler.rs  main.rs  render.rs  server.rs  ssh_login.rs  ui.rs
src/ui/: footer.rs  main.rs  mod.rs  render.rs
