[package]
name = "lazyssh"
version = "0.6.0"
edition = "2021"
keywords = ["tui", "ssh"]
description = "An ssh server manages tui tools."
readme = "README.md"
authors = ["KURANADO <jingxinling1024@163.com>"]
homepage = "https://github.com/KURANADO2/lazyssh"
repository = "https://github.com/KURANADO2/lazyssh"
license = "MIT"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
dirs = "3.0.2"
sublime_fuzzy = "0.7.0"